--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "im24project11-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sunrise-Gong/im24project11-server.git"
+    "url": "git+https://github.com/MinWooPark-dotcom/im24project11-server.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Sunrise-Gong/im24project11-server/issues"
+    "url": "https://github.com/MinWooPark-dotcom/im24project11-server/issues"
   },
-  "homepage": "https://github.com/Sunrise-Gong/im24project11-server#readme",
+  "homepage": "https://github.com/MinWooPark-dotcom/im24project11-server#readme",
   "dependencies": {
     "express": "^4.17.1"
   },
