--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-session": "^1.17.1"
+    "express-session": "^1.17.1",
+    "https": "^1.0.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.6",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sequelize-cli": "^6.2.0"
   }
 }
