--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {  
-    "username": "root",
+    "username": "",
     "password": "",
-    "database": "dev_mayWeather",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "database": "",
+    "host": "",
+    "dialect": "mysql",
+    "port": ""
   },
   "test": {
     "username": "root",
