--- a/package.json
+++ b/package.json
@@ -20,13 +20,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.5",
     "express-session": "^1.17.1",
     "https": "^1.0.0",
     "moment": "^2.29.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "redis": "^3.0.2",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
